<resources>
    <string name="app_name">Solo Food</string>
    <string name="log_in">Log in</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="here">here</string>
    <string name="remember_me">Remember Me</string>
    <string name="user">user</string>
</resources>